--- a/assets/projets.html
+++ b/assets/projets.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/projets.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio développeur web</title>
+    <title>Maël - Dev</title>
 </head>
 <body>
     <br>
@@ -21,6 +21,7 @@
               <li><a href="./projets.html">Projets</a></li>
               <li><a href="./skills.html">Skills</a></li>
               <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./blog.html">Blog</a></li>
               <li><a href="../light/assets/projets.html">Light Mode</a></li>
               <li><a href="https://discord.gg/ABadyvrExk">Discord</a></li>
               <li><a href="https://github.com/MCodeFr">GitHub</a></li>
@@ -36,11 +37,12 @@
             </span>
           </a>
         </div>
-        <a href="../index.html"><button class="header">Accueil</button></a>
-        <a href="./projets.html"><button class="header h2">Projets</button></a>
-        <a href="./skills.html"><button class="header h3">Skills</button></a>
-        <a href="./contact.html"><button class="header h4">Contact</button></a>
-        <a href="../light/assets/projets.html"><button class="header h5">Light Mode</button></a>
+        <a class="header" href="../index.html">Accueil</a>
+        <a class="header h2" href="./projets.html">Projets</a>
+        <a class="header h3" href="./skills.html">Skills</a>
+        <a class="header h4" href="./contact.html">Contact</a>
+        <a class="header h6" href="./blog.html">Blog</a>
+        <a class="header h5" href="../light/assets/projets.html">Light Mode</a>
     </header>
     <div class="jfacile">
         <img class="jfacile-logo" src="./img/JFacile - Logo copie.png" alt="Logo de JFacile">
