--- a/light/index.html
+++ b/light/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Développeur web</title>
+    <title>Maël - Dev</title>
 </head>
 <body>
     <br>
@@ -21,6 +21,7 @@
               <li><a href="./assets/projets.html">Projets</a></li>
               <li><a href="./assets/skills.html">Skills</a></li>
               <li><a href="./assets/contact.html">Contact</a></li>
+              <li><a href="./assets/blog.html">Blog</a></li>
               <li><a href="../index.html">Dark Mode</a></li>
               <li><a href="https://discord.gg/ABadyvrExk">Discord</a></li>
               <li><a href="https://github.com/MCodeFr">GitHub</a></li>
@@ -36,11 +37,12 @@
             </span>
           </a>
         </div>
-        <a href="./index.html"><button class="header">Accueil</button></a>
-        <a href="./assets/projets.html"><button class="header h2">Projets</button></a>
-        <a href="./assets/skills.html"><button class="header h3">Skills</button></a>
-        <a href="./assets/contact.html"><button class="header h4">Contact</button></a>
-        <a href="../index.html"><button class="header h5">Dark Mode</button></a>
+        <a class="header" href="../index.html">Accueil</a>
+        <a class="header h2" href="./assets/projets.html">Projets</a>
+        <a class="header h3" href="./assets/skills.html">Skills</a>
+        <a class="header h4" href="./assets/contact.html">Contact</a>
+        <a class="header h6" href="./assets/blog.html">Blog</a>
+        <a class="header h5" href="../index.html">Dark Mode</a>
     </header>
     <center><img class="photo img" src="../assets/img/MCodeFr.png" alt="Photo de profil de MCodeFr"></center>
     <center><p class="description">MCodeFr - Développeur front-end & back-end</p></center>
