--- a/assets/blog.html
+++ b/assets/blog.html
@@ -44,7 +44,7 @@
         <a class="header h6" href="./blog.html">Blog</a>
         <a class="header h5" href="../light/assets/blog.html">Light Mode</a>
     </header>
-        <div class="blog1">
+        <div class="blog1" height="320" width="240">
         Comment créer un bon site web ?
         <img class="laptop" src="./img/laptop.jpg" alt="Image ordinateur portable">
         <a class="blog-consult1" href="../article/créer-un-bon-site-web.html">Consulter</a>
@@ -67,6 +67,7 @@
             </g>
             </svg>
         </a>
+        <a class="credits" href="https://icones8.fr">Icones8.fr</a>
     </footer>
     <script src="./main.js"></script>
 </body>
