--- a/light/assets/contact.html
+++ b/light/assets/contact.html
@@ -74,6 +74,7 @@
             </g>
             </svg>
         </a>
+        <a class="credits" href="https://icones8.fr">Icones8.fr</a>
     </footer>
     <script src="../../main.js"></script>
 </body>
