--- a/assets/projets.html
+++ b/assets/projets.html
@@ -72,6 +72,7 @@
             </g>
             </svg>
         </a>
+        <a class="credits" href="https://icones8.fr">Icones8.fr</a>
     </footer>
     <script src="./main.js"></script>
 </body>
